--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
     <div class="projects">
         <h3>My Projects</h3>
         <ul>
-            <li>Reckless Car Driving System</li>
-            <li>Remote-Proctoring-System</li>
-            <li>SKIMLIT</li>
-            <li>Car-Damage-Detection-and-Price-Prediction</li>
-            <li>Parking-Space-Detection-using-OpenCV</li>
+            <li>Crop Recommendation System</li>
+            <li>Smart Traffic Management System</li>
+            <li>Resume Skimmer</li>
             <li>Loan Prediction System (Web Application)</li>
             <li>Fall-Detection-system</li>
         </ul>
@@ -70,9 +68,9 @@
             <li>SQL</li>
             <li>TensorFlow</li>
             <li>Scikit-learn</li>
-            <li>Java</li>
+            <li>OpenCV</li>
             <li>HTML/CSS</li>
-            <li>JavaScript</li>
+            <li>BeautifulSoup</li>
         </ul>
     </div>
 
@@ -83,8 +81,8 @@
 
     <div class="connect">
         <h3>Connect With Me 🤝</h3>
-        <a href="https://github.com/your_github_username" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/your_linkedin_username" target="_blank">LinkedIn</a>
+        <a href="https://github.com/vedant-1807" target="_blank">GitHub</a>
+        <a href="www.linkedin.com/in/vedantbhenia" target="_blank">LinkedIn</a>
         <a href="mailto:bhenia@usc.edu">Email</a>
     </div>
 
